--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ google-generativeai==0.3.2
 numpy==1.26.3
 scikit-learn==1.4.0
 sentence-transformers==2.3.1
+gensim==4.3.2
+nltk==3.8.1
+datasets==2.16.1
 
 # Document Processing
 PyPDF2==3.0.1
